WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179617
std::expected: fix and test move
https://bugs.webkit.org/show_bug.cgi?id=179617
Summary
std::expected: fix and test move
JF Bastien
Reported
2017-11-13 10:42:12 PST
Move doesn't seem quite right everywhere.
Attachments
patch
(7.24 KB, patch)
2017-11-13 10:44 PST
,
JF Bastien
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
JF Bastien
Comment 1
2017-11-13 10:44:33 PST
Created
attachment 326771
[details]
patch
Build Bot
Comment 2
2017-11-13 10:46:47 PST
Attachment 326771
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WTF/Expected.cpp:34: Alphabetical sorting problem. [build/include_order] [4] ERROR: Tools/TestWebKitAPI/Tests/WTF/Expected.cpp:428: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2017-11-13 11:19:33 PST
Comment on
attachment 326771
[details]
patch Clearing flags on attachment: 326771 Committed
r224762
: <
https://trac.webkit.org/changeset/224762
>
WebKit Commit Bot
Comment 4
2017-11-13 11:19:35 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-11-15 09:33:21 PST
<
rdar://problem/35561940
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug