std::expected: fix and test move https://bugs.webkit.org/show_bug.cgi?id=179617

Reviewed by Alex Christensen.

Source/WTF:

Non-copyable move types should be able to be in an expected
properly.

* wtf/Expected.h:
(WTF::Expected::value const):
(WTF::Expected::error):
(WTF::Expected::error const):

Tools:

Test that unique_ptr can be moved around properly, both has a
value and an error (and in a <void, unique> specialization).

* TestWebKitAPI/Tests/WTF/Expected.cpp:
(TestWebKitAPI::snowflake::reset):
(TestWebKitAPI::snowflake::snowflake):
(TestWebKitAPI::snowflake::~snowflake):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/195649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224762 268f45cc-cd09-0410-ab3c-d52691b4dbfc